fix modal background overlapping toolbar

--- a/src/components/player-modal/player.modal.scss
+++ b/src/components/player-modal/player.modal.scss
@@ -15,6 +15,7 @@ $ui-height: 220px;
 
 .background {
   height: calc(100% - #{$ui-height});
+  padding-top: 60px;
 
   .cover {
     position: relative;
@@ -22,7 +23,7 @@ $ui-height: 220px;
     transition: opacity .3s;
 
     margin:  0 25px;
-  
+
     img {
       position: absolute;
       top: 0;
@@ -43,12 +44,12 @@ $ui-height: 220px;
     position: absolute;
     top: 0;
     left: 0;
-  
+
     width: 100%;
     height: 100%;
-    
+
     transition: opacity .3s;
-  
+
     img {
       height: 100%;
       width: auto;
@@ -59,12 +60,12 @@ $ui-height: 220px;
       right: 0;
       margin: auto;
     }
-  
+
     .backdrop {
       position: absolute;
       top: 0;
       left: 0;
-  
+
       width: 100%;
       height: 100%;
       background-color: rgba(0, 0, 0, .3);
@@ -76,7 +77,7 @@ $ui-height: 220px;
   height: $ui-height;
   transition: opacity .3s;
   padding: 0 25px 25px;
-  
+
   .metadata {
     font-weight: 600;
 
@@ -138,7 +139,7 @@ $ui-height: 220px;
           background:  var(--ion-color-primary);
           transform: translateX(-50%);
         }
-          
+
         &.one-more {
           &::before {
             content: '1';
